# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

  20 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: Fixed some
  major bugs in the new merge/config protect code.  Merging and config
  protection should now work.
  
  18 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge,
  ebuild.sh : Rewrote merge code.  Should merge symlinks only *after* the
  target has been merged (needs testing).  Added lots of comments.  Split
  dblink.merge() into 2 new functions -- .walktree() and .mergeme().
  Cleaned/optimized merging a good deal.  Added special "-*" USE variable to
  unset *all* USE variables defined up until that point.  
  
  18 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge,
  ebuild.sh : Fixed USE bug (config.reset() threw away our cumulative USE),
  streamlined turbo dep calculations by moving edb cache entry creation to
  ebuild.sh.  Started coding new dblink.merge() method that should be much
  cleaner, faster and merge symlinks safely.
 
  17 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py : Added
  cumulative USE variable support.  The final USE var is calculated
  cumulatively starting with make.profile, then make.conf, and then the
  environment.  Any "-foo" option in USE will turn off a previously-defined USE
  setting.  So, if you want to use the profile-default USE settings except turn
  "X" off, you add 'USE="-X"' to /etc/make.conf and that's it.  This greatly
  simplifies USE variable maintenance since developers can now easily add new
  USE variables that default to 'on'.  Simply add the USE variable and then add
  it to make.profile.  It will then be included in everyone's USE variables
  automatically unless they explicitly "-newvar" in /etc/make.conf or in the
  local environment.  This also enables easy one-shot disabling of USE
  variables.  For example, to merge xchat without GNOME support (when "gnome"